[package]
name = "koriander"
version = "0.1.0"
authors = ["Irving Morales <irvingfisica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
kdtree = "0.6.0"
geo = "0.14.2"
libm = "0.2.1"
ordered-float = "2.0.0"
delaunator = "0.2.0"
rayon = "1.4.0"